--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -34,7 +34,7 @@ jobs:
         uses: svenstaro/upload-release-action@v2
         with:
           repo_token: ${{ secrets.GITHUB_TOKEN }}
-          file: .gotmp/bin/sudo*.exe
+          file: .gotmp/bin/windows_amd64/sudo*.exe
           tag: ${{ github.ref }}
           overwrite: true
           file_glob: true
